test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/o3/mutants/4/result.txt
./test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/o3/mutants/4/Solution.java:15: verify: The prover cannot establish an assertion (UndefinedTooLargeIndex) in method addToArrayForm
//@ requires((num[0] == 0) ==> (num.length == 1));
                 ^
./test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/o3/mutants/4/Solution.java:19: verify: The prover cannot establish an assertion (UndefinedTooLargeIndex) in method addToArrayForm
//@ ensures(((num[0] == 2 && num[1] == 1 && num[2] == 5 && num.length == 3) && (k == 806)) ==> (\result.get(0) == 1 && \result.get(1) == 0 && \result.get(2) == 2 && \result.get(3) == 1));
                                ^
./test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/o3/mutants/4/Solution.java:40: verify: Associated method exit
        return result;
        ^
./test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/o3/mutants/4/Solution.java:20: verify: The prover cannot establish an assertion (UndefinedCalledMethodPrecondition: /Users/chrissleong/Documents/Phd_Studies/openjml/specs/java/util/List.jml:187:) in method addToArrayForm
//@ ensures(((num[0] == 2 && num[1] == 7 && num[2] == 4 && num.length == 3) && (k == 181)) ==> (\result.get(0) == 4 && \result.get(1) == 5 && \result.get(2) == 5));
                                                                                                           ^
/Users/chrissleong/Documents/Phd_Studies/openjml/specs/java/util/List.jml:187: verify: Associated declaration: ./test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/o3/mutants/4/Solution.java:20:
    /*@ pure @*/ E get(int index);
                   ^
/Users/chrissleong/Documents/Phd_Studies/openjml/specs/java/util/List.jml:178: verify: Precondition conjunct is false: index < size()
    //@   requires 0 <= index && index < size();
                                       ^
./test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/o3/mutants/4/Solution.java:18: verify: The prover cannot establish an assertion (UndefinedTooLargeIndex) in method addToArrayForm
//@ ensures(((num[0] == 1 && num[1] == 2 && num[2] == 0 && num[3] == 0 && num.length == 4) && (k == 34)) ==> (\result.get(0) == 1 && \result.get(1) == 2 && \result.get(2) == 3 && \result.get(3) == 4));
                                               ^
./test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/o3/mutants/4/Solution.java:40: verify: Associated method exit
        return result;
        ^
./test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/o3/mutants/4/Solution.java:19: verify: The prover cannot establish an assertion (UndefinedTooLargeIndex) in method addToArrayForm
//@ ensures(((num[0] == 2 && num[1] == 1 && num[2] == 5 && num.length == 3) && (k == 806)) ==> (\result.get(0) == 1 && \result.get(1) == 0 && \result.get(2) == 2 && \result.get(3) == 1));
                                               ^
./test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/o3/mutants/4/Solution.java:40: verify: Associated method exit
        return result;
        ^
error: An error while executing a proof script for addToArrayForm: (error "Solver has unexpectedly terminated")
1 error
10 verification failures
